# MCP-Gateway

./: .env.example  .gitignore  DOCS.md  PLAN.md  README.md  gateway.yaml  policy.yaml  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
docker/: Dockerfile  compose.dev.yaml  docker-compose.yaml
mcp-client/: client.py
mcp-server/: server.py
src/: config.py  main.py
src/routes/: __init__.py  health.py  mcp.py
src/services/: __init__.py  audit.py  auth.py  mcp.py  rate_limit.py  tools_policy.py  tracing.py
tests/: e2e-docker.sh  e2e-local.sh  redis.sh
tests/unit/: test_audit.py  test_auth.py  test_deps_auth.py  test_mcp.py  test_rate_limit.py  test_tools_policy.py  test_tracing.py
