[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Control plane between MCP clients and MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.9",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
mcp-gateway = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py", "src/config.py"]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
"src/config.py" = "config.py"

[tool.uv]
package = true
