[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Control plane between MCP clients and MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.9",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.10",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]

[project.scripts]
mcp-gateway = "main:main"
mcp-server = "mcp_server:main"
mcp-client = "mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py", "src/config.py", "src/deps", "src/routes", "src/services"]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
"src/config.py" = "config.py"
"src/routes/__init__.py" = "routes/__init__.py"
"src/routes/health.py" = "routes/health.py"
"src/routes/mcp.py" = "routes/mcp.py"
"src/deps/__init__.py" = "deps/__init__.py"
"src/deps/auth.py" = "deps/auth.py"
"src/services/__init__.py" = "services/__init__.py"
"src/services/mcp.py" = "services/mcp.py"
"src/services/tools_policy.py" = "services/tools_policy.py"
"src/services/audit.py" = "services/audit.py"
"src/services/auth.py" = "services/auth.py"
"src/services/tracing.py" = "services/tracing.py"
"mcp-server/server.py" = "mcp_server.py"
"mcp-client/client.py" = "mcp_client.py"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
